# Progr-C-CPP-2026-Examples

./: .gitignore  README.md  numbers.txt  positives_even.txt  text.txt
T01/: Lab-01-01.cpp  Lab-01-02.cpp  Lab-01-03.cpp  Lab-01-04.cpp  Lab-01-05.cpp  Lab-01-06.cpp  Report-Lab-01.md
T02/: Lab-02-01.cpp  Lab-02-02.cpp  Lab-02-03.cpp  Lab-02-04.cpp  Lab-02-05.cpp  Lab-02-06.cpp  Lab-02-07.cpp  Lab-02-08.cpp  Lab-02-09.cpp  Lab-02-10.cpp  Lab-02-11.cpp
T03/: Lab-03-01.cpp  Lab-03-02.cpp  Lab-03-03.cpp  Lab-03-04.cpp  Lab-03-05.cpp  Lab-03-06.cpp  Lab-03-07.cpp
T04/: Lab-04-01.cpp  Lab-04-02.cpp  Lab-04-03.cpp
T05/: Lab-05-01.cpp
T06/: Lab-06-01.cpp  Lab-06-02.cpp  Lab-06-03.cpp
T07/: CMakeLists.txt  lab_bank01_02.cpp  lab_bank03_04.cpp  lab_bank05_06.cpp  main.cpp  tasks.h
T08/: Lab-08-01.cpp
T09/: Lab-09-01.cpp  Lab-09-02.cpp  Lab-09-03.cpp  Lab-09-04.cpp
