# Мінімальна необхідна версія CMake (CLion генерує її автоматично)
cmake_minimum_required(VERSION 3.26)

# Назва вашого проєкту (можете змінити на свою)
project(Lab_Catalog_Bank07)

# Використовуємо сучасний стандарт C++
set(CMAKE_CXX_STANDARD 17)

# =====================================================================
# ГОЛОВНА КОМАНДА ЗБИРАННЯ
# =====================================================================
# Перший аргумент - назва готового .exe файлу (Lab_Catalog_Bank07)
# Всі наступні - це ПЕРЕЛІК УСІХ ФАЙЛІВ коду, які треба з'єднати разом!

add_executable(Lab_Catalog_Bank07
        main.cpp                # Головний файл з інтерфейсом (меню)
        tasks.h                 # Заголовний файл (контракт)
        lab_bank01_02.cpp       # Файл з логікою задач 01 та 02
        lab_bank03_04.cpp       # Файл з логікою задач 03 та 04
        lab_bank05_06.cpp       # Файл з логікою задач 05 та 06
)
